# TensorRT-Inject-Preprocess-Postprocess-Layer

./: CMakeLists.txt  CMakePresets.json  README.md  convertOnnx.py  label.txt  main.cpp  tensorRTLogger.h  tensorRTService.cpp  tensorRTService.h
plugin/: tensorRTKernel.cu  tensorRTKernel.h  tensorRTPlugin.cpp  tensorRTPlugin.h
